--- a/src/layout/homepage/src/style.scss
+++ b/src/layout/homepage/src/style.scss
@@ -5,13 +5,19 @@ ul, li {
 }
 
 ul {
-	padding: 4rem 0;
+
+	@media (min-width: 30rem) {
+		columns: 2;
+	}
 
 	@media (min-width: 42rem) {
-		&.list {
-			columns: 3;
-		}
+		columns: 3;
 	}
+}
+
+li {
+	break-inside: avoid-column;
+	padding-bottom: .5em;
 }
 
 .list li {
@@ -23,6 +29,33 @@ ul {
 		padding-bottom: .5em;
 		line-height: inherit;
 	}
+}
+
+h2, h3, h4, p {
+	margin: 0;
+}
+
+h1 {
+	padding: 0 0 .25em;
+	max-width: 30rem;
+	margin: auto;
+}
+
+h1, p {
+	text-align: center;
+}
+
+h1 + p {
+	max-width: 30rem;
+	margin: auto;
+}
+
+h2 {
+	text-align: center;
+}
+
+h4 {
+	font-size: 1.25rem;
 }
 
 .highlight {
@@ -77,6 +110,10 @@ ul {
 			width: 14rem;
 		}
 	}
+
+	+ .block {
+		padding-top: 0;
+	}
 }
 
 
@@ -92,4 +129,15 @@ h1, p {
 
 .dimm {
 	color: #aaa;
+}
+
+.list {
+	margin-top: 3rem;
+}
+
+.list-praha {
+	h2 {
+		padding-top: 3rem;
+		font-size: 1.5rem;
+	}
 }
