--- a/src/layout/app/src/style.scss
+++ b/src/layout/app/src/style.scss
@@ -1,187 +1,17 @@
-#app{
-  font-family: 'Avenir', Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color: #2c3e50;
-}
-
-ul, li {
-	padding: 0;
-	margin: 0;
-	list-style: none;
-}
-
-ul {
-	padding: 3rem .5rem 0 .5rem;
-
-	@media (min-width: 42rem) {
-		columns: 3;
-	}
-}
-
-li {
-	break-inside: avoid-column;
-	padding-bottom: .5em;
-}
-
-h3, p {
-	margin: 0;
-}
-
-h3 {
-	font-size: 1rem;
-}
-
-h4 {
-	margin: 0;
-}
-
-h1 + h4 {
-	margin-top: 2rem;
-}
-
-h1 {
-	margin: 0;
-
-	img {
-		width: 100%;
-		max-width: 20rem;
-		height: auto;
-		margin: auto;
-		display: block;
-
-		transition: all .5s 1s ease-in-out;
-	}
-}
-
-.header {
-	// background: #eee;
-	max-width: 40rem;
-	margin: auto;
-	border-top: 1px solid #eee;
-}
-
-.main {
-	padding: 3rem 0;
-}
-
-.footer-menu {
-	columns: 1;
-	padding: 0; 
-
-	li {
-		display: block;
-	}
-
-	.submenu-linear {
-		display: none;
-	}
-
-	@media (min-width: 40rem) {
-		text-align: center;
-
-		li,
-		.submenu-linear {
-			display: inline;
-		}
-	}
-}
-
-.footer {
-	text-align: center;
-
-	.content {
-		padding: 0 0 3rem 0;
-	}
-
-	h2 {
-		margin: 0 0 .5rem;
-	}
-
-	ul {
-		margin: 0;
-		padding: 0;
-	}
-}
-
-.footer-part {
-	
-}
-
-.footer-part + .footer-part {
-	padding-top: 3rem;
-}
-
-.content {
-	padding: 0 3rem;
+.content-static p+p {
+  margin-top: 1rem;
 }
 
 .social-share {
-	margin: 0 0 1.5rem;
-	text-align: center;
-
-	span {
-		font-size: 9px;
-		text-transform: uppercase;
-		color: #aaa;
-		display: block;
-		font-weight: bold;
-		margin: .5rem auto 0;
-
-		transition: color .25s, opacity .25s;
-		text-align: center;
-	}
-
-	a:hover span {
-		color: #444;
-	}
-
+  text-align: center;
 }
 
-.icon-social {
-	display: inline-block;
-	margin-right: .5em;
-
-	img {
-		display: block;
-		width: 2.5rem;
-		height: 2.5rem;
-		border-radius: 50%;
-		overflow: hidden;
-		margin: auto;
-	}
-
-	@media (min-width: 45rem) {
-		// position: relative;
-		// top: 1rem;
-	}
+.logo img {
+  width: 100%;
+  max-width: 20rem;
+  margin: auto;
 }
 
-.content-static {
-	max-width: 40rem;
-	margin: auto;
-	border-top: 1px solid #eee;
-	padding-top: 4rem;
-
-	h2 {
-		text-align: center;
-		margin-top: 4rem;
-	}
-
-	h2:first-child {
-		margin: 0;
-	}
-
-	p + p {
-		margin-top: 1rem;
-	}
-
-	blockquote {
-		text-align: center;
-		font-family: serif;
-	    font-style: italic;
-	    font-size: 1.25rem;
-	    padding: 3rem;
-	    margin: 0;
-	}
+.logo a {
+  border: none;
 }
