--- a/src/layout/app/src/template.html
+++ b/src/layout/app/src/template.html
@@ -1,44 +1,51 @@
 <div id="app">
 	<div class="main">
-		<div class="content">
+		<div class="block">
 		    <router-view></router-view>
 		</div>
-		<div class="content content-static">
-			<h2>Více informací, lepší rozhodování</h2>
-			<blockquote>“A koho tedy budeme volit? Kde má nějaký program? Znám ho? Můžu se ho zeptat? Vždyť já o nich vůbec nic nevím, podle čeho se pak mám rozhodovat?”</blockquote>
-			<p>A tak to je vždy. Zejména když dojde na senátní nebo komunální volby. Je mnoho webů, které se věnují rozhovorům, statistikám, průzkumům, které jsou zpravodajské a pokrývají nejzajímavější momenty kampaně, kde záleží, nakolik si jaký politik či strana nastolí agendu, i kdyby provokativně. Na druhé straně je Český statistický úřad, který předává čistá data, kdo, kde, volební čísla, zákonné informace.</p>
-			<p>Ale pořád nám chybělo něco jako hlavní rozcestník, kde budou všichni účastníci, přesně podle seznamů z ČSÚ, ale bude tam i něco víc. Odkazy na jejich profily. Jejich volební hesla. Možná i archiv jejich plakátů. Vše bez zaujetí, jen jako čirý přehled, aby lidé měli dostatek informací, než volit půjdou.</p>
-			<p>A protože jsou nejbližší volby komunální a senátorské, vznikly stránky programydovoleb.cz, na kterých právě takový přehled vzniká. <strong>Do jeho vytváření se může kdokoli zapojit.</strong></p>
-			<h2>ProgramyDoVoleb.cz</h2>
-			<p>Stránky jsou soukromou iniciativou <a href="https://twitter.com/stepanrysavy">@stepanrysavy</a>, veškeré náklady si hradíme sami. A přestože se v digitálu pohybujeme několik let, tohle je pro nás novinkou, zejména možnosti cílení a inzerce. Je proto možné, že občas uděláme chybu.</p>
-			<p>Číselníky a kandidátky jsou z <a href="https://www.czso.cz/csu/czso/podminky_pro_vyuzivani_a_dalsi_zverejnovani_statistickych_udaju_csu" target="_blank">otevřených dat Českého Statistického Úřadu</a>.</p>
-			<p>Nemáme členy žádné strany ani hnutí, ani nepracujeme pro žádnou státní ani nestátní organizaci.</p>
-	    	<h2>Připojte se:</h2>
-			<div class="social-share">
-				<div class="icon-social">
-					<a href="https://www.facebook.com/programydovoleb" target="_blank" @click="outbound('fb')">
-						<img src="/static/icon/fb.svg" alt="sdílet na Facebooku">
-					</a>
-				</div>
-				<div class="icon-social">
-					<a href="https://www.twitter.com/programydovoleb" target="_blank" @click="outbound('tw')">
-						<img src="/static/icon/tw.svg" alt="účet na Twitteru">
-					</a>
+		<div class="block content-static">
+			<div class="block">
+				<h2>Více informací, lepší rozhodování</h2>
+				<blockquote>“A koho tedy budeme volit? Kde má nějaký program? Znám ho? Můžu se ho zeptat? Vždyť já o nich vůbec nic nevím, podle čeho se pak mám rozhodovat?”</blockquote>
+				<p>A tak to je vždy. Buď jsme zahlceni informacemi, nebo nemáme žádné. Project <b>Programy do voleb</b> si klade za cíl vytvořit základní jednoduchý přehled o kandidátech, stranách a jejich programech, abychom se mohli ve volbách lépe rozhodovat.</p>
+			</div>
+			<div class="block">
+				<h2>O projektu</h2>
+				<p><b>Programy do voleb</b> jsou soukromou občanskou iniciativou <a href="https://twitter.com/stepanrysavy">@stepanrysavy</a>, veškeré náklady si hradíme sami. Nepočítáme s žádnou další formou financování, nežádáme o evropské granty, státní podporu, ani nebudeme na stránky umisťovat reklamu. Pokud byste měli neodkladnou touhu nám přispět na provoz a reklamu, <a href="mailto:info@programydovoleb.cz">napište nám</a> a domluvíme se, co a jak. Daleko víc ale oceníme, pokud pomůžete se šířením online, sdílením, komentáři, nebo i jen doporučením na vylepšení.</p>
+				<p>Číselníky a kandidátky jsou z <a href="https://www.czso.cz/csu/czso/podminky_pro_vyuzivani_a_dalsi_zverejnovani_statistickych_udaju_csu" target="_blank">otevřených dat Českého Statistického Úřadu</a>.</p>
+				<p>Mnoho informací ručně dohledáváme, nevyužíváme žádné automatické datové zdroje. Využíváme volně dostupné informace ze stránek politických stran, hnutí, kandidátů, státních a evropských organizací či úřadů.</p>
+				<p>Je možné, že občas uděláme chybu nebo některé údaje nebudou úplné nebo již aktuální. Když na nějakou narazíte, dejte nám prosím vědět na <a href="mailto:info@programydovoleb.cz">info@programydovoleb.cz</a></p>
+				<p>Nejsme členy žádné strany ani hnutí, ani nepracujeme pro žádnou státní ani nestátní organizaci.</p>
+			</div>
+			<div class="block">
+				<h2>Připojte se:</h2>
+				<div class="social-share">
+					<div class="icon-social">
+						<a href="https://www.facebook.com/programydovoleb" target="_blank" @click="outbound('fb')">
+							<img src="/static/icon/fb.svg" alt="sdílet na Facebooku">
+						</a>
+					</div>
+					<div class="icon-social">
+						<a href="https://www.twitter.com/programydovoleb" target="_blank" @click="outbound('tw')">
+							<img src="/static/icon/tw.svg" alt="účet na Twitteru">
+						</a>
+					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-	<div class="footer">
-		<div class="content">
-			<div class="footer-part">
+			<div class="block">
+				<h2>Již proběhlo:</h2>
+				<ul class="links">
+					<li><a href="https://komunal18.programydovoleb.cz">Komunální volby 2018</a></li>
+					<li><a href="https://senat18.programydovoleb.cz">Senátní volby 2018</a></li>
+				</ul>
 			</div>
 		</div>
-	</div>
-	<div class="header">
-		<h1>
-			<router-link to="/">
-				<img src="/static/logo.png" alt="Programy do voleb">
-			</router-link>
-		</h1>
+		<div class="block">
+			<h1 class="logo">
+				<router-link to="/">
+					<img src="/static/logo.png" alt="Programy do voleb">
+				</router-link>
+			</h1>
+		</div>
 	</div>
 </div>
