--- a/src/layout/homepage/src/style.scss
+++ b/src/layout/homepage/src/style.scss
@@ -1,143 +1,3 @@
-ul, li {
-	padding: 0;
-	margin: 0;
-	list-style: none;
-}
-
-ul {
-
-	@media (min-width: 30rem) {
-		columns: 2;
-	}
-
-	@media (min-width: 42rem) {
-		columns: 3;
-	}
-}
-
-li {
-	break-inside: avoid-column;
-	padding-bottom: .5em;
-}
-
-.list li {
-
-	line-height: 2.5rem;
-
-	@media (min-width: 42rem) {
-		break-inside: avoid-column;
-		padding-bottom: .5em;
-		line-height: inherit;
-	}
-}
-
-h2, h3, h4, p {
-	margin: 0;
-}
-
-h1 {
-	padding: 0 0 .25em;
-	max-width: 30rem;
-	margin: auto;
-}
-
-h1, p {
+p {
 	text-align: center;
-}
-
-h1 + p {
-	max-width: 30rem;
-	margin: auto;
-}
-
-h2 {
-	text-align: center;
-}
-
-h4 {
-	font-size: 1.25rem;
-}
-
-.highlight {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	padding: 0 0 2rem;
-
-	a {
-		border-bottom: none;
-	}
-
-	img {
-		width: 7rem;
-		height: 7rem;
-		display: block;
-		border-radius: 100%;
-		border: 5px solid #fff;
-		margin: 0 auto 1rem;
-		box-shadow: 0 2px 6px #bbb;
-	}
-
-	> li {
-		width: 8rem;
-		text-align: center;
-		padding-bottom: 2rem;
-	}
-
-	span {
-		display: inline-block;
-		font-weight: bold;
-	}
-
-	@media (min-width: 42rem) {
-		
-		padding: 4rem 0;
-		
-		img {
-			width: 12rem;
-			height: 12rem;
-			box-shadow: 0 4px 16px #bbb;
-			border: 4px solid #fff;
-
-			transition: box-shadow .5s;
-
-			&:hover {
-				box-shadow: 0 4px 16px rgba(#11457e, .5);
-			}
-		}
-
-		> li {
-			width: 14rem;
-		}
-	}
-
-	+ .block {
-		padding-top: 0;
-	}
-}
-
-
-
-h2 {
-	margin: 0;
-	font-size: 1.2rem;
-}
-
-h1, p {
-	text-align: center;
-}
-
-.dimm {
-	color: #aaa;
-}
-
-.list {
-	margin-top: 3rem;
-}
-
-.list-praha {
-	h2 {
-		padding-top: 3rem;
-		font-size: 1.5rem;
-	}
 }
