--- a/src/layout/homepage/src/template.html
+++ b/src/layout/homepage/src/template.html
@@ -15,9 +15,7 @@
 		<p>Volby v ČR se konají 24. a 25. května.</p>
 		<p>Češi vybírají 21 zástupců.</p>
 		<ul class="links">
-			<li><a href="https://eu2019.programydovoleb.cz/" target="_blank">Co náš čeká</a></li>
-			<li><a href="https://eu2019.programydovoleb.cz/europoslanci-2014-2019" target="_blank">Přehled europoslanců</a></li>
-			<li><a href="https://eu2019.programydovoleb.cz/vysledky-2014" target="_blank">Výsledky voleb 2014</a></li>
+			<li><a href="https://eu2019.programydovoleb.cz/zakladni-informace" target="_blank">Co náš čeká</a></li>
 		</ul>
 	</div>
 </div>
