Added Senate link

--- a/src/layout/homepage/src/template.html
+++ b/src/layout/homepage/src/template.html
@@ -8,6 +8,14 @@
 				</a>
 			</div>
 		</li>
+			<li>
+				<div class="highlighted">
+					<a href="https://senat19.programydovoleb.cz/">
+						<img src="/static/icon/icon-senat18.png" alt="ikona: volby do Senátu">
+						<span class="is-link">Doplňovací volby do Senátu</span>
+					</a>
+				</div>
+			</li>
 	</ul>
 	<div class="block">
 		<h1>Volby do Evropského parlamentu</h1>
@@ -15,7 +23,16 @@
 		<p>Volby v ČR se konají 24. a 25. května.</p>
 		<p>Češi vybírají 21 zástupců.</p>
 		<ul class="links">
-			<li><a href="https://eu2019.programydovoleb.cz/zakladni-informace" target="_blank">Co náš čeká</a></li>
+			<li><a href="https://eu2019.programydovoleb.cz/" target="_blank">Velký přehled</a></li>
+		</ul>
+	</div>
+	<div class="block">
+		<h1>Doplňovací volby do Senátu</h1>
+		<p>Nového senátora vybírá obvod 24 - Praha 9.</p>
+		<p>Volby se konají 5. a 6. dubna.</p>
+		<p>Voliči vybírají z 10 kandidátů.</p>
+		<ul class="links">
+			<li><a href="https://eu2019.programydovoleb.cz/" target="_blank">Kandidáti</a></li>
 		</ul>
 	</div>
 </div>
