fetchers and loaders

--- a/src/components/election/election-item/src/style.scss
+++ b/src/components/election/election-item/src/style.scss
@@ -40,8 +40,8 @@
 }
 
 .loading {
-  transform-origin: 52% 75%;
-  animation: rotate 1s infinite;
+  transform-origin: 51% 62%;
+  animation: rotate 2s infinite;
   animation-timing-function: linear;
-  top: -.4em !important;
+  // top: -.4em !important;
 }
