--- a/src/components/results/tables/table-parties/src/style.scss
+++ b/src/components/results/tables/table-parties/src/style.scss
@@ -17,7 +17,7 @@ li {
 
 button {
   border: none;
-  padding-left: 0; 
+  padding-left: 0;
 }
 
 li:not(.headline) {
@@ -27,12 +27,21 @@ li:not(.headline) {
 }
 
 .headline {
-  font-size: 10px;
+  font-size: 10px !important;
   text-transform: uppercase;
 }
 
 .headline + .headline {
   margin-top: -.8rem;
+}
+
+.progress + :not(.progress) {
+  border-top: 2px solid #f00;
+}
+
+li:not(.progress) {
+  font-size: .8em;
+  color: #888;
 }
 
 .party {
