--- a/src/layout/app/src/template.html
+++ b/src/layout/app/src/template.html
@@ -11,7 +11,7 @@
 					<div class="header-menu-holder">
 						<ul>
 							<li>
-								<outbound-link to="https://krajskevolby2020.programydovoleb.cz" content="Krajské volby 2020" />
+								<outbound-link href="https://krajskevolby2020.programydovoleb.cz" content="Krajské volby 2020" />
 							</li>
 							<!--
 							<li>
@@ -19,7 +19,10 @@
 							</li>
 							-->
 							<li>
-								<router-link to="/vysledky">Předchozí volby</router-link>
+								<router-link to="/vysledky">Výsledky voleb</router-link>
+							</li>
+							<li>
+								<router-link to="/rejstrik">Rejstřík stran</router-link>
 							</li>
 						</ul>
 					</div>
