--- a/src/components/towns/list-senate/src/style.scss
+++ b/src/components/towns/list-senate/src/style.scss
@@ -1,21 +1,3 @@
-img {
-  border-radius: 50%;
-  display: block;
-  width: 1.5rem;
-  height: 1.5rem;
-  border: 1px solid rgba(0, 0, 0, .1);
-  background: #fff;
-}
-
-.footer-content img,
-.social-share-double img,
-.icon-double img {
-  width: 2.5rem;
-  height: 2.5rem;
-}
-
-.icon-no-background img {
-  border-color: transparent;
-  border-radius: 0;
-  background: none;
+.results {
+  margin-top: 2rem;
 }
