--- a/src/layout/overview/election/src/template.html
+++ b/src/layout/overview/election/src/template.html
@@ -1,20 +1,11 @@
-<div class="layout-homepage">
-	<ul class="highlight">
-		<li>
-			<div class="highlighted">
-				<a href="https://krajskevolby2020.programydovoleb.cz/">
-					<img src="/static/icon/kv2020.jpg" alt="ikona: volby do evropskeho parlamentu">
-					<span class="is-link">Krajské volby</span>
-				</a>
-			</div>
-		</li>
-	</ul>
-	<div class="block">
-		<h1>Krajské volby</h1>
-		<p>Nové krajské zastupitele vybírá všech 13 krajů kromě Prahy.</p>
-		<p>Volby běžně probíhají v říjnu, zřejmě tak bude i v roce 2020.</p>
-		<ul class="links">
-			<li><a href="https://krajskevolby2020.programydovoleb.cz" target="_blank">Jak jsme volili v roce 2016</a></li>
-		</ul>
+<div class="layout-overview-elections">
+	<div v-if="about">
+	  <h1>{{ about.name }}<br><small>{{ about.label }}</small></h1>
+		<election-timeline :elections="elections" />
+		<h2>O volbách</h2>
+		<election-type class="part" v-for="(election, index) in $store.state.static.elections.list" :key="'el_' + index" :election="election" v-if="election.hash === type" :open="true" />
+	</div>
+	<div class="goto">
+		<router-link to="/vysledky">&larr; Všechny výsledky</router-link>
 	</div>
 </div>
