--- a/src/components/party/party-name-with-dot/src/style.scss
+++ b/src/components/party/party-name-with-dot/src/style.scss
@@ -1,12 +1,18 @@
 i {
-  display: inline-block;
+  position: absolute;
   width: .5em;
   height: .5em;
   margin-right: .25em;
   border-radius: 50%;
   transform: translateY(-.15em);
+  left: -1em;
+  top: .6em;
 }
 
 a {
   border: none;
+}
+
+span {
+  position: relative;
 }
