Better candidate tab

--- a/src/assets/my-style.scss
+++ b/src/assets/my-style.scss
@@ -316,3 +316,10 @@ button, .button, .btn {
 	box-shadow: 0 5px 15px #ddd;
 	padding: 1.5rem;
 }
+
+.info-box {
+	border-left: 3px solid #f00;
+	background: #fafafa;
+	padding: 1rem;
+	margin: 6rem 0;
+}
