--- a/src/layout/homepage/src/template.html
+++ b/src/layout/homepage/src/template.html
@@ -26,35 +26,50 @@
 						<tbody>
 							<tr v-for="(item, index) in senate20_3.list">
 								<td>
-									<person-name :data="item.name" />
-									<div class="small dimm">
-										<span v-if="item.age">{{ item.age }} let &middot;</span>
-										<span v-if="item.work">{{ item.work }} &middot;</span>
-										<div v-if="item.from && item.fromID">bydliště <outbound-link :content="item.from" :href="'https://www.polist.cz/obec/' + item.fromID" /> &middot;</div>
+									<h3><person-name :data="item.name" /></h3>
+									<div class="info">
+										<span v-if="item.age">{{ item.age }} let</span>
+										<span v-if="item.work">&middot; {{ item.work }}</span>
+										<div v-if="item.from && item.fromID">bydliště <outbound-link :content="item.from" :href="'https://www.polist.cz/obec/' + item.fromID" /></div>
 										<div v-if="item.nominee">
-											nominace&nbsp;
+											<br>&middot; nominace&nbsp;
 											<span v-if="typeof item.nominee === 'string'">{{ item.nominee }}</span>
 											<span v-if="typeof item.nominee === 'number'">
 												<party-name-with-dot :reg="item.nominee" :alwaysShort="true" />
 											</span>
-											&middot;
 										</div>
 										<div v-if="item.member">
 											<span v-if="typeof item.member === 'string'">
-												člen {{ item.member }}</span>
+												&middot; člen {{ item.member }}</span>
 											<span v-if="typeof item.member === 'number' && item.member != 99">
-													člen&nbsp;
+													&middot; člen&nbsp;
 													<party-name-with-dot :reg="item.member" :alwaysShort="true" />
+											</span>
+										</div>
+										<div v-if="item.support">
+											<br>&middot;
+											<span class="hide-40rem">podpora</span>
+											<span class="show-40rem">kandidát získal podporu od</span>
+											<span v-for="(support, ix) in item.support">
+												<span v-if="typeof support === 'string'">
+													{{ support }}</span>
+												<span v-if="typeof support === 'number' && support != 99">
+														&nbsp;
+														<party-name-with-dot :reg="support" :alwaysShort="true" />
+												</span>
 											</span>
 										</div>
 									</div>
 								</td>
 								<td style="white-space: nowrap">
 									<div v-if="item.program">
-										<div class="icon hide-40rem">
+										<div class="icon">
 											<outbound-icon :href="item.program" :type="'link'" />
 										</div>
-										<outbound-link :href="item.program" class="show-40rem">Program</outbound-link>
+										<outbound-link :href="item.program" :addon="false">Program</outbound-link>
+									</div>
+									<div v-if="!item.program" class="small dimm">
+										<em>program chybí</em>
 									</div>
 								</td>
 								<td>
@@ -72,6 +87,12 @@
 				</div>
 			</div>
 		</div>
+		<br>
+		<p class="center dimm small">Kandidáti ještě musí být úředně potvrzeni. Jistotu budeme mít až na konci měsíce.</p>
+	  <div class="info-box center">
+	    <h3>Chybí něco, nebo jste našli chybu?</h3>
+	    <p>Prosím, napište na <b>info@programydovoleb.cz</b> nebo přes některou ze sociálních sítí. Co nejdříve opravíme.</p>
+	  </div>
 	</div>
 	<div class="block">
 		<h1>Letos nás také čekají:</h1>
