--- a/src/assets/my-style.scss
+++ b/src/assets/my-style.scss
@@ -224,6 +224,25 @@ button, .button, .btn {
 	}
 }
 
+.columns-2-3 {
+	columns: 2;
+	column-gap: 1rem;
+
+	@media (min-width: 50rem) {
+		columns: 3;
+
+		& > * {
+	    break-inside: avoid-column;
+			page-break-inside: avoid;
+	    padding-bottom: .2em;
+		}
+
+		.stats & li:first-child {
+			border-top: 1px solid #f4f4f4;
+		}
+	}
+}
+
 .links-icons {
 	padding: .5rem 0;
 
