--- a/src/components/candidate/fake/src/template.html
+++ b/src/components/candidate/fake/src/template.html
@@ -1,11 +1,11 @@
 <div class="candidate-answer compact">
 	<div class="candidate-icon">
 		<div class="candidate-image">
-			<img src="/static/icon/senatni-volby.svg">
+			<img src="/static/logo-programy.png">
 		</div>
 	</div>
 	<div class="candidate-data">
-		<div class="box" :style="{'border-left': '3px solid ' + color}">
+		<div class="box">
 			<div class="box-content">
 				<h3>
 					Programy do voleb
