--- a/src/layout/questions/src/style.scss
+++ b/src/layout/questions/src/style.scss
@@ -22,9 +22,22 @@ h2 {
 
 	img {
 		display: block;
-		width: 6rem;
-		height: 6rem;
-		margin: 0 auto;
+		width: 12rem;
+		height: 12rem;
+		margin: 0 auto 1em;
+		border: 1px solid #eee;
+		border-radius: 50%;
+	}
+
+	.answer-icon {
+		position: absolute;
+		left: 50%;
+		top: 0;
+		transform: translate(130%, -25%);
+		border: none;
+		border-radius: 0;
+		width: 4rem;
+		height: 4rem;
 	}
 }
 
